Fixing a spacing issue

--- a/styles/profile.css
+++ b/styles/profile.css
@@ -216,7 +216,7 @@ p.friendslist {
 font-size: 12px;
 font-weight: 600;
 text-align: center;
-height: 14px;
+height: 13px;
 margin-top: 10px;
 margin-left: 16px;
 margin-right: 10px;
